--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,25 +1,34 @@
-<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-  <mat-card class="box">
-    <mat-card-header>
-      <mat-card-title>Register</mat-card-title>
-    </mat-card-header>
-    <form class="form" [formGroup]="registerForm" (ngSubmit)="onSubmit($event)">
-      <mat-card-content>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Email" formControlName="email">
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Password" type="password" formControlName="password">
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="First Name" formControlName="firstName">
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Last Name" formControlName="lastName">
-        </mat-form-field>
-      </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block" type="submit">Register</button>
-    </form>
-    <a class="login-rerout-link" [routerLink]="['/login']">Already have an account?</a>
-  </mat-card>
+<div class="row justify-content-center g-3 mt-5">
+  <div class="col-xl-4">
+    <div class="card">
+      <div class="card-body">
+        <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
+        <h5 class="card-title mb-3 text-center">Register</h5>
+        <div class="mb-3">
+          <label for="email" class="form-label">Email</label>
+          <input id="email" type="email" placeholder="email" name="Email" class="form-control" formControlName="email">
+        </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Password</label>
+            <input id="password" type="password" placeholder="Password" name="password" class="form-control" formControlName="password">
+          </div>
+          <div class="mb-3">
+            <label for="firstName" class="form-label">First Name</label>
+            <input id="firstName" type="text" placeholder="First Name" name="firstName" class="form-control" formControlName="firstName">
+          </div>
+          <div class="mb-3">
+            <label for="lastName" class="form-label">Last Name</label>
+            <input id="lastName" type="text" placeholder="Last Name" name="lastName" class="form-control" formControlName="lastName">
+          </div>
+          <div class="mb-3">
+            <button type="submit" class="btn btn-outline-success me-2">Register</button>
+            <button type="reset" class="btn btn-outline-warning">Reset</button>
+          </div>
+          <div>
+            <a class="card-link" [routerLink]="['/login']">Already have an account?</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
