--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,32 +1,31 @@
 <div class="post-card">
-    <mat-card>
-        <mat-card-header>
+    <div>
+        <div>
             <div mat-card-avatar class="header-image"></div>
-            <mat-card-title>{{post.author.firstName}} {{post.author.lastName}}</mat-card-title>
+            <mat-card-title>{{post.author.username}}</mat-card-title>
             <mat-card-subtitle>{{post.author.email}}</mat-card-subtitle>
-        </mat-card-header>
+        </div>
         <img mat-card-image *ngIf="post.imageUrl" src="{{ post.imageUrl }}" alt="Post Image">
-        <mat-card-content>
+        <div>
             <p>
                 {{post.text}}
             </p>
             <div *ngFor="let comment of post.comments" class="comment-container">
-                <mat-divider></mat-divider>
                 <app-comment [comment]="comment"></app-comment>
             </div>
-        </mat-card-content>
-        <mat-card-actions align="end">
+        </div>
+        <div align="end">
             <button mat-raised-button color="primary" (click)="toggleReplyToPost()">Reply</button>
-        </mat-card-actions>
+        </div>
         <form class="form" *ngIf="replyToPost" [formGroup]="commentForm" (ngSubmit)="submitReply($event)">
-            <mat-form-field class="full-width" appearance="fill">
-                <mat-label>Make a Post</mat-label>
+            <div class="full-width" appearance="fill">
+                <div>Make a Post</div>
                 <textarea matInput autofocus formControlName="text"></textarea>
-            </mat-form-field>
+            </div>
             <div align="end">
                 <button mat-raised-button color="warn" (click)="toggleReplyToPost()">Cancel</button>
                 <button mat-raised-button color="primary" type="submit">Post</button>
             </div>
         </form>
-    </mat-card>
+    </div>
 </div>
