--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,9 +1,12 @@
-<div class="row justify-content-center g-3 mt-5">
+<div *ngIf="!isSubmitted" class="row justify-content-center g-3 mt-5">
   <div class="col-xl-4">
     <div class="card">
       <div class="card-body">
         <form (ngSubmit)="onSubmit()" [formGroup]="registerForm">
         <h5 class="card-title mb-3 text-center">Register</h5>
+          <p *ngIf="errorMessage" class="text-danger">
+            {{errorMessage}}
+          </p>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
           <input id="email" type="email" placeholder="email" name="Email" class="form-control" formControlName="email">
@@ -13,12 +16,8 @@
             <input id="password" type="password" placeholder="Password" name="password" class="form-control" formControlName="password">
           </div>
           <div class="mb-3">
-            <label for="firstName" class="form-label">First Name</label>
-            <input id="firstName" type="text" placeholder="First Name" name="firstName" class="form-control" formControlName="firstName">
-          </div>
-          <div class="mb-3">
-            <label for="lastName" class="form-label">Last Name</label>
-            <input id="lastName" type="text" placeholder="Last Name" name="lastName" class="form-control" formControlName="lastName">
+            <label for="username" class="form-label">Username</label>
+            <input id="username" type="text" placeholder="Username" name="username" class="form-control" formControlName="username">
           </div>
           <div class="mb-3">
             <button type="submit" class="btn btn-outline-success me-2">Register</button>
@@ -31,4 +30,7 @@
       </div>
     </div>
   </div>
+</div>
+<div *ngIf="isSubmitted" class="d-flex justify-content-center m-5">
+  <div class="spinner-border" role="status"></div>
 </div>
