--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,11 +1,9 @@
-<mat-card class="user-card">
+<div class="user-card">
     <div class="user-circle"></div>
-    <mat-divider></mat-divider>
     <p style="padding-top: 1em; font-weight: bold;">
-        {{user.firstName}} {{user.lastName}}
+        {{user.username}}
     </p>
     <p>
         {{user.email}}
     </p>
-    
-</mat-card>
+</div>
