--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -9,7 +9,7 @@
           </p>
         <div class="mb-3">
           <label for="email" class="form-label">Email</label>
-          <input id="email" type="email" placeholder="email" name="Email" class="form-control" formControlName="email">
+          <input id="email" type="email" placeholder="Email" name="Email" class="form-control" formControlName="email">
         </div>
           <div class="mb-3">
             <label for="password" class="form-label">Password</label>
