--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -24,6 +24,8 @@
           </div>
           <div>
             <a class="card-link" [routerLink]="['/register']">Don't have an account?</a>
+            <br>
+            <a class="card-link" [routerLink]="['/reset-password']">Forgot your password?</a>
           </div>
         </form>
       </div>
