Updating before checkout

--- a/src/app/components/likepost/likepost.component.html
+++ b/src/app/components/likepost/likepost.component.html
@@ -1,1 +1,5 @@
-<p>likepost works!</p>
+
+
+<button (click)="addLikeToPost()">Like</button>>
+<p>{{likepostservice.count}}</p>
+<button (click)="removeLikeFromPost()">Dislike</button>
