added images to assests

--- a/src/app/components/splash/splash.component.html
+++ b/src/app/components/splash/splash.component.html
@@ -1,1 +1,1 @@
-<img src="assets/images/rev-logo.png" alt="high-score man logo image" style="width: 100%">
+<img src="assets/images/high-score-logo.png" alt="high-score man logo image" style="width: 100%">
