--- a/src/styles.css
+++ b/src/styles.css
@@ -177,7 +177,7 @@ a {
 
   margin-bottom: 1em;
 
-  background-image: url('./assets/images/favicon.png');
+  background-image: url('./assets/images/high-score-logo-man.png');
   background-size: cover;
 }
 
