added logout to navbar feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
   No Message Arrived
 </div>
 <div>
-  <app-navbar></app-navbar>
+  <app-navbar *ngIf="user"></app-navbar>
   <router-outlet></router-outlet>
 </div>
