--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,11 +14,14 @@
 
       </ul>
       <ul class="navbar-nav mb-auto me-5 mb-2 mb-lg-0">
-        <li  class="nav-item">
+        <li *ngIf="!authService.getCurrentUser()" class="nav-item">
           <a class="nav-link" routerLink="register">Register</a>
         </li>
-        <li  class="nav-item">
+        <li *ngIf="!authService.getCurrentUser()" class="nav-item">
           <a class="nav-link" routerLink="login">Login</a>
+        </li>
+        <li *ngIf="authService.getCurrentUser()" class="nav-item">
+          <a (click)="authService.logout()" class="nav-link" routerLink="login">Logout</a>
         </li>
       </ul>
     </div>
