--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,8 @@
 </div>
 <div>
   <app-navbar></app-navbar>
-  <router-outlet></router-outlet>
+  <div class="container-fluid">
+    <router-outlet></router-outlet>
+  </div>
+
 </div>
