--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,5 +1,6 @@
 <div class="user-card">
-    <div class="user-circle"></div>
+  <img src="../../../assets/images/rev-logo.png" alt="" class="img-thumbnail">
+
     <p style="padding-top: 1em; font-weight: bold;">
         {{user.username}}
     </p>
