started working on linking accounts and editing profile

--- a/src/app/components/post-feed-page/post-feed-page.component.html
+++ b/src/app/components/post-feed-page/post-feed-page.component.html
@@ -1,8 +1,8 @@
 <div class="row g-3">
-  <div class="col-md-3">
+  <div class="col-xl-3">
     <app-user-card></app-user-card>
   </div>
-  <div class="col-md-9">
+  <div class="col-xl-9">
     <div [ngClass]="['sidebyside', 'post-feed-container']">
       <form class="form" *ngIf="!createPost; else createPostTemplate">
         <div class="full-width" appearance="fill">
