--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,10 +1,28 @@
-<div class="user-card">
-  <img src="../../../assets/images/rev-logo.png" alt="" class="img-thumbnail">
-
-    <p style="padding-top: 1em; font-weight: bold;">
-        {{user.username}}
+<div style="background: pink">
+  <div class="d-inline-flex" style="background: red">
+    <img src="../../../assets/images/rev-logo.png" alt="" class="img-thumbnail">
+  </div>
+  <div class="d-flex" style="background: aqua">
+    <a class="mx-2" (click)="OAuth('google')"><i class="bi bi-google"></i></a>
+    <a class="mx-2" (click)="OAuth('facebook')"><i class="bi bi-facebook"></i></a>
+    <a class="mx-2" (click)="OAuth('github')"><i class="bi bi-github"></i></a>
+  </div>
+  <ng-container *ngIf="!isEditProfile">
+  <div class="d-flex" style="background: blue">
+    <p class="text-wrap text-break">
+      {{user.username}}
     </p>
-    <p>
-        {{user.email}}
+  </div>
+  <div class="d-flex" style="background: orange">
+    <p class="text-wrap text-break">
+      {{user.email}}
     </p>
+  </div>
+  <div class="d-flex">
+    <a (click)="isEditProfile=true">edit</a>
+  </div>
+  </ng-container>
+  <ng-container *ngIf="isEditProfile">
+    <form></form>
+  </ng-container>
 </div>
