added proper components, completed forms for post and comment.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li>
-          <a class="nav-link" routerLink="post-feed">Forums</a>
+          <a class="nav-link" routerLink="post-feed">My Page</a>
         </li>
 
       </ul>
