--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -3,6 +3,6 @@
     <app-user-card></app-user-card>
   </div>
   <div id="main-content" class="flex-grow-1">
-    <app-post-feed-page></app-post-feed-page>
+    <app-my-feed></app-my-feed>>
   </div>
 </div>
