--- a/src/app/components/my-feed/my-feed.component.html
+++ b/src/app/components/my-feed/my-feed.component.html
@@ -1,6 +1,6 @@
 <div>
   <app-post *ngIf="togglePost && isUserLoggedIn" class="" [user]="user" (postEvent)="onSubmitPost($event)"></app-post>
-  <button *ngIf="isUserLoggedIn && !togglePost" (click)="togglePost = !togglePost" class="btn btn-success mt-4">New Post</button>
+  <a *ngIf="isUserLoggedIn && !togglePost" (click)="togglePost = !togglePost" class="link mt-4">New Post</a>
   <button *ngIf="isUserLoggedIn && togglePost" (click)="togglePost = !togglePost" class="btn btn-danger mt-4">Cancel</button>
   <div *ngFor="let post of Posts" class="list-group m-3">
     <a (click)="onSelectPost(post)" class="list-group-item list-group-item-action bg" aria-current="true" data-bs-toggle="modal" data-bs-target="#exampleModal">
