--- a/src/app/components/my-feed/my-feed.component.html
+++ b/src/app/components/my-feed/my-feed.component.html
@@ -20,3 +20,38 @@
     </a>
   </div>
 </div>
+
+
+<div (blur)="hideComments()"  class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
+  <div class="modal-dialog">
+    <div *ngIf="selectedPost" class="modal-content abg">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5 me-3" id="exampleModalLabel">{{selectedPost.game}}</h1>
+        <div>
+          <p class="m-3"> {{selectedPost.author.username}}</p>
+          <small>{{selectedPost.date | date : "MM/dd/yy hh:mm"}}</small>
+        </div>
+        <div>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
+      </div>
+      <div class="modal-body ">
+        <p class="text-wrap text-break">{{selectedPost.content}}</p>
+      </div>
+<!--      <div>-->
+<!--        <div *ngFor="let comment of selectedPost.comments" class="list-group m-3">-->
+<!--          <a class="list-group-item bbg" aria-current="false">-->
+<!--            <div class="d-flex w-100 justify-content-between">-->
+<!--              <h5 class="mb-1"> {{comment.commenter.username}}</h5>-->
+<!--              <small>{{comment.date | date : "MM/dd/yy hh:mm"}}</small>-->
+<!--            </div>-->
+<!--            <p class="mb-1">{{comment.content}}</p>-->
+<!--          </a>-->
+<!--        </div>-->
+<!--&lt;!&ndash;        <div class="modal-body">&ndash;&gt;-->
+<!--&lt;!&ndash;          <button *ngIf="isUserLoggedIn && !toggleComment" (click)="toggleComment = !toggleComment" class="btn btn-success">New Comment</button>&ndash;&gt;-->
+<!--&lt;!&ndash;          <app-comment *ngIf="toggleComment" [user]="user" [selectedPost]="selectedPost" (commentEvent)="onSubmitComment($event)"></app-comment>&ndash;&gt;-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--      </div>-->
+    </div>
+  </div>
+</div>
