--- a/src/app/components/user-card/user-card.component.html
+++ b/src/app/components/user-card/user-card.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="d-inline-flex mt-4">
-    <img src="assets/images/andrwen.png" alt="" class="img-thumbnail">
+    <img src="assets/images/high-score-logo-man.png" alt="" class="img-thumbnail">
   </div>
   <div class="d-flex mt-4">
     <a class="mx-2" (click)="OAuth('google')"><i class="bi bi-google"></i></a>
