--- a/src/app/components/my-feed/my-feed.component.html
+++ b/src/app/components/my-feed/my-feed.component.html
@@ -13,6 +13,11 @@
       <div class="d-flex w-100 justify-content-between">
         <div class="row">
           <p class="mb-1">{{post.author.username}}</p>
+          <img
+            src="https://api.dicebear.com/5.x/bottts-neutral/svg?seed={{post.author.username}}"
+            alt=""
+            style="max-height: 50px; width: auto"
+          >
           <small class="text-wrap text-break">{{post.content | truncate : 100}}</small>
         </div>
         <img alt="game img" src="assets/images/{{post.game | removeSpaces}}.png" class="img-thumbnail" style="max-height: 150px">
