--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,4 +1,4 @@
-<div class="row g-3 mt-4 ms-5">
+<div class="row  bg-image" style="background-image: url('assets/images/high-score-logo.png'); width: unset">
   <div class="col-xl-3">
     <app-user-card></app-user-card>
   </div>
