--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg abg">
+<nav class="navbar navbar-expand-lg bbg">
   <div class="container-fluid">
     <a (click)="toggleDarkTheme()"><i class="bi bi-moon-fill m-3"></i></a>
     <a class="navbar-brand" ></a>
