--- a/src/styles.css
+++ b/src/styles.css
@@ -21,7 +21,7 @@ body.non-dark-theme {
   --bkg-color: #e1f1f1;
   --btn-txt-color: #EEE0CB;
   --btn-bg-color: #EEE0CB;
-  --contrast-bg: #3A92BB;
+  --contrast-bg: #AED4E6;
   --contrast-bbg: #AED4E6;
   --on-hover: #424446;
   --in-text-input: #EEE0CB;
