--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-lg abg">
   <div class="container-fluid">
     <a (click)="toggleDarkTheme()"><i class="bi bi-moon-fill m-3"></i></a>
-    <a class="navbar-brand" ></a>
-    <img src="assets/images/high-score-logo-small.png" alt="Life Logo" height="38" width="111" routerLink="" class="nav-img">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <a class="navbar-brand"></a>
+    <img src="assets/images/high-score-logo-small.png" alt="Life Logo" height="38" width="111" routerLink=""
+      class="nav-img">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -13,10 +15,23 @@
         </li>
       </ul>
 
-      <form (ngSubmit)="onSearch()" [formGroup]="searchForm" class="d-flex" role="search">
-        <input class="form-control me-2" formControlName="search" type="search" placeholder="Search for other players" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <div class="dropdown d-flex">
+        <input class="form-control me-2" [(ngModel)]="search" type="search" placeholder="Search for other players"
+          aria-label="Search">
+        <button class="btn btn-success" (click)="onSearch()" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Search
+        </button>
+        <ul class="dropdown-menu">
+          <div *ngIf="searchSubmitted" class="d-flex justify-content-center">
+            <div class="spinner-border" role="status"></div>
+          </div>
+          <li *ngIf="noResults">
+            <span class="dropdown-item-text">No results.</span>
+          </li>
+          <li *ngFor="let user of searchResults"><a class="dropdown-item" href="#">{{user.username}}</a></li>
+        </ul>
+      </div>
 
 
       <ul class="navbar-nav mb-auto me-5 mb-2 mb-lg-0">
@@ -33,4 +48,3 @@
     </div>
   </div>
 </nav>
-
