--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,9 @@
-<div class="row bgImg" style="background-size: auto; background-repeat: no-repeat; background-attachment: fixed">
+<div class="row">
   <div class="col-xl-3">
     <app-user-card></app-user-card>
   </div>
 
-  <div class="col-xl-9 ">
+  <div class="col-xl-9 mt-4">
     <ul class="nav nav-tabs">
       <li class="nav-item">
         <a class="nav-link" [ngClass]="{active : selected === 'my-feed'}" (click)="selected='my-feed'">My Feed</a>
