--- a/src/app/components/leaderboard/leaderboard.component.html
+++ b/src/app/components/leaderboard/leaderboard.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div *ngFor="let field of Posts | keyvalue" class="list-group m-3 w-75">
+  <div *ngFor="let field of Posts | keyvalue" class="list-group m-3 mt-5 mb-3 w-75">
     <div class="list-group-item bg">
       <div class="d-flex w-100 justify-content-between">
         <div>
