--- a/src/app/components/my-feed/my-feed.component.html
+++ b/src/app/components/my-feed/my-feed.component.html
@@ -1,8 +1,8 @@
 <div>
   <app-post *ngIf="togglePost && isUserLoggedIn" class="" [user]="user" (postEvent)="onSubmitPost($event)"></app-post>
-  <a *ngIf="isUserLoggedIn && !togglePost" (click)="togglePost = !togglePost" class="link mt-4">New Post</a>
+  <a *ngIf="isUserLoggedIn && !togglePost" (click)="togglePost = !togglePost" class="link m-4">New Post</a>
   <button *ngIf="isUserLoggedIn && togglePost" (click)="togglePost = !togglePost" class="btn btn-danger mt-4">Cancel</button>
-  <div *ngFor="let post of Posts" class="list-group m-3 w-75">
+  <div *ngFor="let post of Posts" class="list-group m-3 mt-5 mb-3 w-75">
     <a (click)="onSelectPost(post)" class="list-group-item list-group-item-action bg" aria-current="true" data-bs-toggle="modal" data-bs-target="#exampleModal">
       <div class="d-flex w-100 justify-content-between">
         <div>
@@ -13,11 +13,7 @@
       <div class="d-flex w-100 justify-content-between">
         <div class="row">
           <p class="mb-1">{{post.author.username}}</p>
-          <img
-            src="https://api.dicebear.com/5.x/bottts-neutral/svg?seed={{post.author.username}}"
-            alt=""
-            style="max-height: 50px; width: auto"
-          >
+          <img src="https://api.dicebear.com/5.x/bottts-neutral/svg?seed={{post.author.username}}" alt="" style="max-height: 50px; width: auto">
           <small class="text-wrap text-break">{{post.content | truncate : 100}}</small>
         </div>
         <img alt="game img" src="assets/images/{{post.game | removeSpaces}}.png" class="img-thumbnail" style="max-height: 150px">
@@ -30,14 +26,20 @@
 <div (blur)="hideComments()"  class="modal modal-xl fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" >
   <div class="modal-dialog">
     <div *ngIf="selectedPost" class="modal-content abg">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5 me-3" id="exampleModalLabel">{{selectedPost.game}}</h1>
-        <div>
-          <p class="m-3"> {{selectedPost.author.username}}</p>
-          <small>{{selectedPost.date | date : "MM/dd/yy hh:mm"}}</small>
+      <div class="modal-header bbg">
+        <div class="d-flex">
+          <img class="" src="https://api.dicebear.com/5.x/bottts-neutral/svg?seed={{selectedPost.author.username}}" alt="" style="max-height: 50px; width: auto">
+          <p class="ms-3"> {{selectedPost.author.username}}</p>
         </div>
-        <div>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button></div>
+        <div class="d-flex">
+          <h1 class="modal-title fs-5 me-3" id="exampleModalLabel">{{selectedPost.game}}</h1>
+        </div>
+        <div class="clear-fix">
+          <small class="me-5">{{selectedPost.date | date : "MM/dd/yy hh:mm"}}</small>
+          <span>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </span>
+        </div>
       </div>
       <div class="modal-body ">
         <p class="text-wrap text-break">{{selectedPost.content}}</p>
@@ -46,7 +48,10 @@
       <div *ngFor="let postComment of selectedPost.postComments" class="list-group m-3">
          <a class="list-group-item bbg" aria-current="false">
           <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1"> {{postComment.commenter.username}}</h5>
+            <div class="d-flex">
+              <img src="https://api.dicebear.com/5.x/bottts-neutral/svg?seed={{postComment.commenter.username}}" alt="" style="max-height: 50px; width: auto">
+              <h5 class="m-3"> {{postComment.commenter.username}}</h5>
+            </div>
              <small>{{postComment.date | date : "MM/dd/yy hh:mm"}}</small>
            </div>
            <p class="mb-1">{{postComment.content}}</p>
