--- a/src/app/components/post-form/post.component.html
+++ b/src/app/components/post-form/post.component.html
@@ -1,7 +1,7 @@
 <div class="form-group" [formGroup]="postForm">
   <div class="col-md-4">
     <label class="form-label mt-4" for="game">Game: </label>
-    <select id="game" class="form-control" type="text" formControlName="game" aria-label="Default select example">
+    <select id="game" class="form-control black-text" type="text" formControlName="game" aria-label="Default select example">
       <option selected>Select your game!</option>
       <option [value]="game.ddnr">DDNR</option>
       <option [value]="game.digcraft">DigCraft</option>
